# ESSD-Verification

./: .gitignore  LICENSE.md  README.md  aux_functs.R  aux_params.R  calc_scores.R  check_file.R  plot_for_ECMWF_newsletter.R  pyproject.toml  read_data.R  run_verif.R  validation_pub.R  verif_functions.R  verification_for_ESSD.Rmd
